--- a/subscribe-pages/kb-subscribe.html
+++ b/subscribe-pages/kb-subscribe.html
@@ -27,16 +27,12 @@
 	<link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
 	
-	<!-- Library -->
-    <link href="../css/lib.css" rel="stylesheet">
-	
 	<!-- Custom - Common CSS -->
     <meta name="robots" content="noindex">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" media="all" href="{stylesheet='enewsletterarchive/enewsletter_archive_css'}">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-	<link rel="stylesheet" href="css/rtl.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">	
 </head>
 
@@ -129,14 +125,14 @@ footer {
 
 <body data-offset="200" data-spy="scroll" data-target=".ownavigation">
 	<!-- Header Section -->
-	<header class="container-fluid no-left-padding no-right-padding header_s header-fix header_s7">
+	<header class="container-fluid px-auto mx-auto header_s header-fix header_s7" style="background-color: #051D51;">
 		<!-- Container -->
 		<div class="container">	
 			<!-- Menu Block -->
-			<div class="container-fluid no-left-padding no-right-padding menu-block" style="border-top: none;">
+			<div class="container-fluid px-auto mx-auto menu-block" style="border-top: none">
 				<nav class="navbar ownavigation navbar-expand-lg">
-					<div class="d-flex col-lg-2" style="padding:20px; text-align: center; margin:auto;">
-						<a class="navbar-brand" href="../index.html" title="Logo"><img style="max-width: 140%;" src="../images/kootenaybiz_logo_NEW.png"></a>
+					<div class="d-flex col-lg-2" style="text-align: center; margin:auto;">
+						<a class="navbar-brand" href="../index.html" title="Logo"><img style="max-width: 140%;" src="images/kb-logo.png"></a>
 					</div>					
 				</nav>	
 			</div><!-- Menu Block /- -->
@@ -146,11 +142,11 @@ footer {
 	<div class="main-container">	
 		<main class="site-main">
 			<!-- Page Content -->
-			<div class="container-fluid no-left-padding no-right-padding no-top-padding page-content blog-single cover-fullwidth" style="padding-bottom: 0;">
+			<div class="container-fluid px-0 page-content blog-single cover-fullwidth" style="padding-bottom: 0;">
 
-				<div class="jumbotron text-center py-5" style="background-image: url(../images/contact-img/subscribe-banner.png); height: 450px; border-radius: 0;">
-					<h1 class="display-4 text-white font-weight-bold col-12 col-md-8 mx-auto mt-5">Keep up-to-date with KootenayBiz</h1>
-					<p class="lead text-white col-12 col-md-8 mx-auto" style="line-height: 1.6;">Lorem ipsum dolor sit amet, consectetur adipiscing elitenean mollis dui quis lacus maximus, eget auctor nisl ullamcorper.</p>
+				<div class="jumbotron text-center py-5" style="background-image: url(images/subscribe-banner.png); height: 450px; border-radius: 0;">
+					<h1 class="display-4 text-white font-weight-bold col-12 col-md-6 mx-auto mt-5">Keep up-to-date with KootenayBiz</h1>
+					<p class="lead text-white col-12 col-md-6 mx-auto" style="line-height: 1.6; font-weight: bold;">Lorem ipsum dolor sit amet, consectetur adipiscing elitenean mollis dui quis lacus maximus, eget auctor nisl ullamcorper.</p>
 				  </div>
 
 				<!-- two columns -->
@@ -241,7 +237,7 @@ footer {
 				<div class="container my-5 mx-auto px-0">
 					<div class="row mx-auto justify-content-center d-flex">
 						<div class="col-12 col-md-4 my-5">
-							<img src="../images/contact-img/subscribe-image.png">
+							<img  class="col-12 col-md-12" src="images/subscribe-image.png">
 						</div>
 						<div class="col-12 col-md-4 my-5">
 							<h3 class="font-weight-bold mb-3">TARGETTED TO YOU</h3>
@@ -346,9 +342,9 @@ footer {
 				</div>
 				<div class="row my-5 mx-auto px-0">
 					<div class="col-12 col-md-6 mx-auto">
-						<p style="line-height: 1.6;">Remember, this newsletter is designed to keep you informed about business news and developments in the Kootenays. If you enjoyed it, invite a friend to subscribe!</p>
-						<p style="line-height: 1.6;">KootenayBiz.com is owned and operated by KPI Media Inc. We highlight business news and trends in the Kootenay and Boundary regions of British Columbia. ©2021 KPI Media Inc. All Rights Reserved.</p>
-						<p style="line-height: 1.6;">To help us fulfill your request to receive information from snoriderswest.com via e-mail, please add <a href="mailto:distribution@kpimedia.com">distribution@kpimedia.com</a> to your Address Book or Safe List. Not interested in receiving this newsletter anymore? Click here to unsubscribe.</p>
+						<p style="line-height: 1.6;font-size: 13px;">Remember, this newsletter is designed to keep you informed about business news and developments in the Kootenays. If you enjoyed it, invite a friend to subscribe!</p>
+						<p style="line-height: 1.6;font-size: 13px;">KootenayBiz.com is owned and operated by KPI Media Inc. We highlight business news and trends in the Kootenay and Boundary regions of British Columbia. ©2021 KPI Media Inc. All Rights Reserved.</p>
+						<p style="line-height: 1.6;font-size: 13px;">To help us fulfill your request to receive information from snoriderswest.com via e-mail, please add <a href="mailto:distribution@kpimedia.com">distribution@kpimedia.com</a> to your Address Book or Safe List. Not interested in receiving this newsletter anymore? Click here to unsubscribe.</p>
 					</div>
 				</div>
 	</main>
