--- a/subscribe-pages/rw-subscribe.html
+++ b/subscribe-pages/rw-subscribe.html
@@ -13,7 +13,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-	<title>Subscribe - SnoRiders</title>
+	<title>Subscribe - RidersWest</title>
 
 	<!-- Standard Favicon -->
 	<link rel="icon" type="image/x-icon" href="../images/favicon.svg"/>
@@ -36,7 +36,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">	
 </head>
 
-<style>
+<style> 
 body {
     font-family: 'Lato', 'sans-serif';
 }
@@ -56,10 +56,9 @@ a:hover {
     margin: auto;
     justify-content: space-around;
 }
-
 h3 {
     font-family: 'Rajdhani', sans-serif;
-} 
+}
 .btn1,
 .btn2,
 .btn3 {
@@ -71,12 +70,13 @@ h3 {
     align-items: center;
     justify-content: center;
 }
+
 .btn1 {
-    background-color: #05112A;
+    background-color: #313E2C;
     color: #FFF;
 }
 .btn1:hover {
-    background-color: rgb(25, 51, 104);
+    background-color: #71816B;
     color: #FFF;
 }
 .btn2 {
@@ -117,26 +117,26 @@ img {
     font-size: 1.2em;
 }
 footer {
-    background-color: #05112A;
+    background-color: #313E2C;
     margin: auto;
     text-align: center;
     padding: 10px;
     color: white;
     position: sticky;
-    position: sticky;
 }
+
 </style>
 
 <body data-offset="200" data-spy="scroll" data-target=".ownavigation">
 	<!-- Header Section -->
-	<header class="container-fluid px-auto mx-auto header_s header-fix header_s7" style="background-color: #05112A;">
+	<header class="container-fluid px-auto mx-auto header_s header-fix header_s7" style="background-color: #313E2C;">
 		<!-- Container -->
 		<div class="container">	
 			<!-- Menu Block -->
 			<div class="container-fluid px-auto mx-auto menu-block" style="border-top: none">
 				<nav class="navbar ownavigation navbar-expand-lg">
 					<div class="d-flex col-lg-2" style="text-align: center; margin:auto;">
-						<a class="navbar-brand" href="https://snoriderswest.com/" title="Logo"><img style="max-width: 140%;" src="images/sr-logo.png"></a>
+						<a class="navbar-brand" href="https://riderswestmag.com/" title="Logo"><img style="max-width: 140%;" src="images/rw-logo.png"></a>
 					</div>					
 				</nav>	
 			</div><!-- Menu Block /- -->
@@ -148,9 +148,9 @@ footer {
 			<!-- Page Content -->
 			<div class="container-fluid px-0 page-content blog-single cover-fullwidth" style="padding-bottom: 0;">
 
-				<div class="jumbotron text-center py-5" style="background-image: url(images/sr-banner.png); height: 450px; border-radius: 0;">
-					<h1 class="display-4 text-white font-weight-bold col-12 col-md-6 mx-auto mt-5">Keep up-to-date with SnoRiders</h1>
-					<p class="lead text-white col-12 col-md-6 mx-auto" style="line-height: 1.6; font-weight: bold;">Keep up-to-date with the snowmobiling stories, events, products and photos from SnoRiders.</p>
+				<div class="jumbotron text-center py-5" style="background-image: url(images/rw-banner.png); height: 450px; border-radius: 0;">
+					<h1 class="display-4 text-white font-weight-bold col-12 col-md-6 mx-auto mt-5">Keep up-to-date with RidersWest</h1>
+					<p class="lead text-white col-12 col-md-6 mx-auto" style="line-height: 1.6; font-weight: bold;">Keep up-to-date with ATVing and motorcycling stories, events, products and photos from RidersWest.</p>
 				  </div>
 
 				<!-- two columns -->
@@ -158,11 +158,11 @@ footer {
 					<div class="row mx-auto justify-content-center d-flex">
 						<div class="col-12 col-md-4 mt-5">
 							<h3 class="font-weight-bold mb-3">RELEVANT CONTENT</h3>
-							<p style="line-height: 1.6; font-size: 15px;">Our e-newsletters contain important snowmobiling news from Western Canada. Remain in the loop by reading stories about what’s happening in the motorsports industry.</p>
+							<p style="line-height: 1.6; font-size: 15px;">Our e-newsletters contain important ATVing and motorcycling news from Western Canada. Remain in the loop by reading stories about what’s happening in the motorsports industry.</p>
 						</div>
 						<div class="col-12 col-md-4 mt-5">
 							<h3 class="font-weight-bold mb-3">A SPOT FOR LEARNING</h3>
-							<p style="line-height: 1.6; font-size: 15px;">We share new information regarding the latest makes, models and promotions from all your favourite brands like Arctic Cat, Ski-Doo, Polaris and Yamaha.</p>
+							<p style="line-height: 1.6; font-size: 15px;">We share new information regarding the latest makes, models and promotions from all your favourite brands like Arctic Cat, Can-Am, Polaris and Yamaha.</p>
 						</div>
 					</div>
 				</div>		
@@ -239,12 +239,12 @@ footer {
 				<div class="container my-5 mx-auto px-0">
 					<div class="row mx-auto justify-content-center d-flex">
 						<div class="col-12 col-md-4 my-5">
-							<img  class="col-12 col-md-12" src="images/sr-image.png">
+							<img  class="col-12 col-md-12" src="images/rw-image.png">
 						</div>
 						<div class="col-12 col-md-4 my-5">
 							<h3 class="font-weight-bold mb-3">TARGETTED TO YOU</h3>
 							<p style="line-height: 1.6; font-size: 15px;">Each newsletter is streamlined to share only the most interesting articles once a month.</p>
-							<p style="line-height: 1.6; font-size: 15px;">There’s a SnoRiders and a RidersWest edition of our e-newsletters. Choose whichever appeals most to you. If you’d like to receive both, <a href="http://riderswestmag.com/subscribe" target="_blank"><strong>Subscribe to RidersWest</strong></a> as well.</p>
+							<p style="line-height: 1.6; font-size: 15px;">There’s a RidersWest and a SnoRiders edition of our e-newsletters. Choose whichever appeals most to you. If you’d like to receive both, <a href="http://snoriderswest.com/subscribe" target="_blank"><strong>Subscribe to SnoRiders</strong></a> as well.</p>
 						</div>
 					</div>
 				</div>	
@@ -253,7 +253,7 @@ footer {
 				<!-- REMINDER -->
 				<div class="container my-5 mx-auto px-0">
 					<h3 class="font-weight-bold mt-5  mb-3 text-center">A GLENTE REMINDER</h3>
-					<p style="line-height: 1.6; font-size: 15px;" class="col-lg-8 col-12 text-center mx-auto">Hearing from us once a month reminds you that SnoRiders is here for you. Reach out to us with your concerns and stories, and visit our website for even more up-to-date content. Know a fellow sledder who you think would appreciate getting this content? Please forward this page to them so they can subscribe to the SnoRiders Newsletter.</p>
+					<p style="line-height: 1.6; font-size: 15px;" class="col-lg-8 col-12 text-center mx-auto">Learn about fellow ATVers in your local area, get the latest club news, and find out the benefits of being a part of an ATV club. We’ll keep you informed on what’s happening across Canada too. Know a fellow Rider who you think would appreciate getting this content? Please forward this page to them so they can subscribe to the RidersWest Newsletter.</p>
 					<div class="row mx-auto justify-content-center d-flex">
 						<div class="col-12 col-md-4 mt-3">
 							<ul>
@@ -327,32 +327,32 @@ footer {
                     <hr class="sectionDivider">
 					<div class="row mx-auto text-center col-12 col-md-8">
 						<div class="col-md-6 mx-auto text-center mb-3 mt-4"> 
-                            <a class="btn btn-lg btn-block btn3" href="https://snoriderswest.com/share">Share your story with SnoRiders</a>
+                            <a class="btn btn-lg btn-block btn3" href="https://riderswestmag.com/share">Share your story with RidersWest</a>
                         </div>
                     </div>
 					<div class="row mx-auto text-center col-12 col-md-8">
 						<div class="col-md-6 mx-auto text-center"> 
-                            <a class="btn btn-lg btn-block btn1" href="https://snoriderswest.com/stories"><strong>Stories</strong></a>
-                            <a class="btn btn-lg btn-block btn1" href="https://snoriderswest.com/travel"><strong>Travel</strong></a>  
+                            <a class="btn btn-lg btn-block btn1" href="https://riderswestmag.com/stories"><strong>Stories</strong></a>
+                            <a class="btn btn-lg btn-block btn1" href="https://riderswestmag.com/travel"><strong>Travel</strong></a>  
                         </div>
 						<div class="col-md-6 mx-auto text-center"> 
-                            <a class="btn btn-lg btn-block btn1" href="https://snoriderswest.com/gear"><strong>Gear</strong></a>
-                            <a class="btn btn-lg btn-block btn1" href="https://snoriderswest.com/events"><strong>Events</strong></a>
+                            <a class="btn btn-lg btn-block btn1" href="https://riderswestmag.com/gear"><strong>Gear</strong></a>
+                            <a class="btn btn-lg btn-block btn1" href="https://riderswestmag.com/events"><strong>Events</strong></a>
                         </div>
                     </div>
                 </div>
 				<div class="row my-5 mx-auto px-0">
                     <div class="col-12 col-md-6 mx-auto">
-                        <p style="line-height: 1.6;font-size: 13px;">Keep in mind this newsletter is designed to keep you informed about the latest in snowmobiling. Thanks to you, SnoRiders is pleased to be one of Western Canada’s leading snowmobiling magazine and website publishers.</p>
-                        <p style="line-height: 1.6;font-size: 13px;">SnoRidersWest.com is owned and operated by KPI Media Inc. We highlight the most remarkable places to snowmobile in Western Canada (British Columbia, Alberta, Saskatchewan and Manitoba), the clubs that maintain the trails and the Rad Riders who promote and elevate the sport. We also cover the coolest gear on the market and host the super-popular SledTown ShowDown competition. ©2021 KPI Media Inc. All Rights Reserved.</p>
-                        <p style="line-height: 1.6;font-size: 13px;">To help us fulfill your request to receive information from snoriderswest.com via e-mail, please add <a href="mailto:distribution@kpimedia.com">distribution@kpimedia.com</a> to your Address Book or Safe List. Not interested in receiving this newsletter anymore? Click here to unsubscribe.</p>
+                        <p style="line-height: 1.6; font-size: 13px;">This newsletter is designed to keep you informed about the latest in ATVing, motocross, motorcycling and other motorized sports. Thanks to you, RidersWest is one of Western Canada's leading magazines and websites among riders.</p>
+                        <p style="line-height: 1.6; font-size: 13px;">RidersWestMag.com is owned and operated by KPI Media Inc. We highlight the most remarkable places to ride ATVs and motorbikes in Western Canada (British Columbia, Alberta, Saskatchewan and Manitoba), the clubs that maintain trails and motocross tracks, and the Rad Riders who promote and elevate the sport. We also cover the coolest gear on the market. ©2021 KPI Media Inc. All Rights Reserved.</p>
+                        <p style="line-height: 1.6; font-size: 13px;">To help us fulfill your request to receive information from snoriderswest.com via e-mail, please add <a href="mailto:distribution@kpimedia.com">distribution@kpimedia.com</a> to your Address Book or Safe List. Not interested in receiving this newsletter anymore? Click here to unsubscribe.</p>
                     </div>
 				</div>    
 	</main>
 
 		
 	<footer class="mt-5">
-		<a href="https://snoriderswest.com/" class="footerText">SnoRiderswest.com</a>
+		<a href="https://riderswestmag.com/" class="footerText">RidersWestmag.com</a>
 	</footer>
 	
 	<!-- JQuery v1.12.4 -->
