--- a/subscribe-pages/rv-subscribe.html
+++ b/subscribe-pages/rv-subscribe.html
@@ -13,7 +13,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-	<title>SR Subscribe</title>
+	<title>RV Subscribe</title>
 
 	<!-- Standard Favicon -->
 	<link rel="icon" type="image/x-icon" href="../images/favicon.svg"/>
@@ -26,8 +26,8 @@
 	<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@700&display=swap" rel="stylesheet">
-	<!-- Custom - Common CSS -->
+
+    <!-- Custom - Common CSS -->
     <meta name="robots" content="noindex">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" media="all" href="{stylesheet='enewsletterarchive/enewsletter_archive_css'}">
@@ -36,7 +36,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">	
 </head>
 
-<style>
+<style> 
 body {
     font-family: 'Lato', 'sans-serif';
 }
@@ -56,10 +56,6 @@ a:hover {
     margin: auto;
     justify-content: space-around;
 }
-
-h3 {
-    font-family: 'Rajdhani', sans-serif;
-} 
 .btn1,
 .btn2,
 .btn3 {
@@ -67,33 +63,34 @@ h3 {
     padding: 10px;
     margin: 5px auto;
     display: flex;
+    width: 100%;
     font-weight: 900;
     align-items: center;
     justify-content: center;
 }
 .btn1 {
-    background-color: #05112A;
+    background-color: #522A5B;
     color: #FFF;
 }
 .btn1:hover {
-    background-color: rgb(25, 51, 104);
+    background-color: #280D2E;
     color: #FFF;
 }
 .btn2 {
-    background-color: #F71212;
+    background-color: #FA5F05;
     color: #FFF;
 }
 .btn2:hover {
-    background-color: #C30101;
+    background-color: #DC5100;
     color: #FFF;
 }
 .btn3 {
-    background-color: #F79B12;
-    color: #000;
+    background-color: #12C3F7;
+    color: #FFF;
 }
 .btn3:hover {
-    background-color: #E18A08;
-    color: #000;
+    background-color: #07ADDD;
+    color: #FFF;
 }
 .btn4 {
     font-size: 1.3em;
@@ -103,7 +100,7 @@ h3 {
     font-weight: 900;
     align-items: center;
     justify-content: center;
-    background-color: #05112A;
+    background-color: #FA5F05;
     color: #FFF;
 }
 
@@ -117,26 +114,25 @@ img {
     font-size: 1.2em;
 }
 footer {
-    background-color: #05112A;
+    background-color: #522A5B;
     margin: auto;
     text-align: center;
     padding: 10px;
     color: white;
-    position: sticky;
     position: sticky;
 }
 </style>
 
 <body data-offset="200" data-spy="scroll" data-target=".ownavigation">
 	<!-- Header Section -->
-	<header class="container-fluid px-auto mx-auto header_s header-fix header_s7" style="background-color: #05112A;">
+	<header class="container-fluid px-auto mx-auto header_s header-fix header_s7" style="background-color: #522A5B;">
 		<!-- Container -->
 		<div class="container">	
 			<!-- Menu Block -->
 			<div class="container-fluid px-auto mx-auto menu-block" style="border-top: none">
 				<nav class="navbar ownavigation navbar-expand-lg">
 					<div class="d-flex col-lg-2" style="text-align: center; margin:auto;">
-						<a class="navbar-brand" href="https://snoriderswest.com/" title="Logo"><img style="max-width: 140%;" src="images/sr-logo.png"></a>
+						<a class="navbar-brand" href="https://rvwest.com/" title="Logo"><img style="max-width: 140%;" src="images/rv-logo.png"></a>
 					</div>					
 				</nav>	
 			</div><!-- Menu Block /- -->
@@ -148,9 +144,9 @@ footer {
 			<!-- Page Content -->
 			<div class="container-fluid px-0 page-content blog-single cover-fullwidth" style="padding-bottom: 0;">
 
-				<div class="jumbotron text-center py-5" style="background-image: url(images/sr-banner.png); height: 450px; border-radius: 0;">
-					<h1 class="display-4 text-white font-weight-bold col-12 col-md-6 mx-auto mt-5">Keep up-to-date with SnoRiders</h1>
-					<p class="lead text-white col-12 col-md-6 mx-auto" style="line-height: 1.6; font-weight: bold;">Keep up-to-date with the snowmobiling stories, events, products and photos from SnoRiders.</p>
+				<div class="jumbotron text-center py-5" style="background-image: url(images/rv-banner.png); height: 450px; border-radius: 0;">
+					<h1 class="display-4 text-white font-weight-bold col-12 col-md-6 mx-auto mt-5">Keep up-to-date with RVwest</h1>
+					<p class="lead text-white col-12 col-md-6 mx-auto" style="line-height: 1.6; font-weight: bold;">Fill out our handy form and subscribe to the RVwest Newsletter - full of travel tips and camping hacks, RVing stories, recipes and other articles pertaining to the RV lifestyle.</p>
 				  </div>
 
 				<!-- two columns -->
@@ -158,11 +154,11 @@ footer {
 					<div class="row mx-auto justify-content-center d-flex">
 						<div class="col-12 col-md-4 mt-5">
 							<h3 class="font-weight-bold mb-3">RELEVANT CONTENT</h3>
-							<p style="line-height: 1.6; font-size: 15px;">Our e-newsletters contain important snowmobiling news from Western Canada. Remain in the loop by reading stories about what’s happening in the motorsports industry.</p>
+							<p style="line-height: 1.6; font-size: 15px;">We have streamlined each issue to include a sampling of our most popular content, so you only get the most useful information in your inbox every month.</p>
 						</div>
 						<div class="col-12 col-md-4 mt-5">
 							<h3 class="font-weight-bold mb-3">A SPOT FOR LEARNING</h3>
-							<p style="line-height: 1.6; font-size: 15px;">We share new information regarding the latest makes, models and promotions from all your favourite brands like Arctic Cat, Ski-Doo, Polaris and Yamaha.</p>
+							<p style="line-height: 1.6; font-size: 15px;">You will be able to stay in the loop, with access to news and current events in the world of RVing, and participate in our online communities via our Facebook and Twitter pages.</p>
 						</div>
 					</div>
 				</div>		
@@ -180,12 +176,12 @@ footer {
                         font-weight: 900;
                         align-items: center;
                         justify-content: center;
-                        background-color: #F71213;
+                        background-color: #532A5B;
                         color: #FFF;
                         border: none;
                     }
                     .contact-form .form-group .submit:hover {
-                        background-color: #051D51;
+                        background-color: #280D2E;
                         color: #FFF;
                     }
                 </style>
@@ -194,7 +190,7 @@ footer {
 					<div class="contact-form col-12 col-md-8 mx-auto" style="background-color: #f7f7f7;">
 						<div class="row">
 							<div class="col-12 col-md-12 col-sm-6 mt-4 px-5">
-								<h3 class="entry-title-lg uppercase mb-1 mt-4 font-weight-bold text-center col-12 col-md-9 mx-auto" style="font-size: 30px;">THE PERFECT NEWSLETTER FOR SNOWMOBILING LOVERS</h3>
+								<h3 class="entry-title-lg uppercase mb-1 mt-4 font-weight-bold text-center col-12 col-md-9 mx-auto" style="font-size: 30px;">THE PERFECT NEWSLETTER FOR RVING LOVERS</h3>
 								<form class="py-4">
 									<div class="row">
 										<div class="form-group col-md-6">
@@ -239,12 +235,12 @@ footer {
 				<div class="container my-5 mx-auto px-0">
 					<div class="row mx-auto justify-content-center d-flex">
 						<div class="col-12 col-md-4 my-5">
-							<img  class="col-12 col-md-12" src="images/sr-image.png">
+							<img  class="col-12 col-md-12" src="images/rv-image.png">
 						</div>
 						<div class="col-12 col-md-4 my-5">
 							<h3 class="font-weight-bold mb-3">TARGETTED TO YOU</h3>
-							<p style="line-height: 1.6; font-size: 15px;">Each newsletter is streamlined to share only the most interesting articles once a month.</p>
-							<p style="line-height: 1.6; font-size: 15px;">There’s a SnoRiders and a RidersWest edition of our e-newsletters. Choose whichever appeals most to you. If you’d like to receive both, <a href="http://riderswestmag.com/subscribe" target="_blank"><strong>Subscribe to RidersWest</strong></a> as well.</p>
+							<p style="line-height: 1.6; font-size: 15px;">Each newsletter is streamlined to share only the most interesting articles once a month. We won't spam your inbox, and email addresses are never sold to a third party.</p>
+							<p style="line-height: 1.6; font-size: 15px;">We will entertain you with relevant information about the joys and challenges of RVing.</p>
 						</div>
 					</div>
 				</div>	
@@ -253,7 +249,7 @@ footer {
 				<!-- REMINDER -->
 				<div class="container my-5 mx-auto px-0">
 					<h3 class="font-weight-bold mt-5  mb-3 text-center">A GLENTE REMINDER</h3>
-					<p style="line-height: 1.6; font-size: 15px;" class="col-lg-8 col-12 text-center mx-auto">Hearing from us once a month reminds you that SnoRiders is here for you. Reach out to us with your concerns and stories, and visit our website for even more up-to-date content. Know a fellow sledder who you think would appreciate getting this content? Please forward this page to them so they can subscribe to the <strong>SnoRiders Newsletter.</strong></p>
+					<p style="line-height: 1.6; font-size: 15px;" class="col-lg-8 col-12 text-center mx-auto">Our subscribers get to be part of the RVwest family, and we invite you to share your own camping photos and stories. Know a fellow RVing lover who you think would appreciate getting this content? Please forward this page to them so they can subscribe to the <strong>RVwest Newsletter.</strong></p>
 					<div class="row mx-auto justify-content-center d-flex">
 						<div class="col-12 col-md-4 mt-3">
 							<ul>
@@ -281,7 +277,7 @@ footer {
 					<div class="contact-form col-12 col-md-8 mx-auto" style="background-color: #f7f7f7;">
 						<div class="row">
 							<div class="col-12 col-md-12 col-sm-6 mt-4 px-5">
-								<h3 class="entry-title-lg uppercase mb-1 mt-4 font-weight-bold text-center col-12 col-md-9 mx-auto" style="font-size: 30px;">THE PERFECT NEWSLETTER FOR SNOWMOBILING LOVERS</h3>
+								<h3 class="entry-title-lg uppercase mb-1 mt-4 font-weight-bold text-center col-12 col-md-9 mx-auto" style="font-size: 30px;">THE PERFECT NEWSLETTER FOR RVING LOVERS</h3>
 								<form class="py-4">
 									<div class="row">
 										<div class="form-group col-md-6">
@@ -327,32 +323,32 @@ footer {
                     <hr class="sectionDivider">
 					<div class="row mx-auto text-center col-12 col-md-8">
 						<div class="col-md-6 mx-auto text-center mb-3 mt-4"> 
-                            <a class="btn btn-lg btn-block btn3" href="https://snoriderswest.com/share">Share your story with SnoRiders</a>
+                            <a class="btn btn-lg btn-block btn3" href="https://rvwest.com/share">Share your story with RVwest</a>
                         </div>
                     </div>
 					<div class="row mx-auto text-center col-12 col-md-8">
 						<div class="col-md-6 mx-auto text-center"> 
-                            <a class="btn btn-lg btn-block btn1" href="https://snoriderswest.com/stories"><strong>Stories</strong></a>
-                            <a class="btn btn-lg btn-block btn1" href="https://snoriderswest.com/travel"><strong>Travel</strong></a>  
+                            <a class="btn btn-lg btn-block btn1" href="https://rvwest.com/stories"><strong>Stories</strong></a>
+                            <a class="btn btn-lg btn-block btn1" href="https://rvwest.com/travel"><strong>Travel</strong></a>  
                         </div>
 						<div class="col-md-6 mx-auto text-center"> 
-                            <a class="btn btn-lg btn-block btn1" href="https://snoriderswest.com/gear"><strong>Gear</strong></a>
-                            <a class="btn btn-lg btn-block btn1" href="https://snoriderswest.com/events"><strong>Events</strong></a>
+                            <a class="btn btn-lg btn-block btn1" href="https://rvwest.com/gear"><strong>Gear</strong></a>
+                            <a class="btn btn-lg btn-block btn1" href="https://rvwest.com/events"><strong>Events</strong></a>
                         </div>
                     </div>
                 </div>
 				<div class="row my-5 mx-auto px-0">
-                    <div class="col-12 col-md-6 mx-auto">
-                        <p style="line-height: 1.6;font-size: 13px;">Keep in mind this newsletter is designed to keep you informed about the latest in snowmobiling. Thanks to you, SnoRiders is pleased to be one of Western Canada’s leading snowmobiling magazine and website publishers.</p>
-                        <p style="line-height: 1.6;font-size: 13px;">SnoRidersWest.com is owned and operated by KPI Media Inc. We highlight the most remarkable places to snowmobile in Western Canada (British Columbia, Alberta, Saskatchewan and Manitoba), the clubs that maintain the trails and the Rad Riders who promote and elevate the sport. We also cover the coolest gear on the market and host the super-popular SledTown ShowDown competition. ©2021 KPI Media Inc. All Rights Reserved.</p>
-                        <p style="line-height: 1.6;font-size: 13px;">To help us fulfill your request to receive information from snoriderswest.com via e-mail, please add <a href="mailto:distribution@kpimedia.com">distribution@kpimedia.com</a> to your Address Book or Safe List. Not interested in receiving this newsletter anymore? Click here to unsubscribe.</p>
+                    <div class="col-12 col-md-6 mx-auto">                   
+                        <p style="line-height: 1.6; font-size: 13px;">Remember, this newsletter is designed to keep you informed about what’s happening in the world of RVing. If you enjoyed it, invite a friend to subscribe!</p>
+                        <p style="line-height: 1.6; font-size: 13px;">RVwest.com is owned and operated by KPI Media Inc. We cover everything related to the world of RVing, including vintage RV restorations, must-see destinations, DIY tips, camping gear and more. We have readers all across Canada and the United States, and we warmly welcome them to share their stories and photos with us. ©2021 KPI Media Inc. All Rights Reserved.</p>
+                        <p style="line-height: 1.6; font-size: 13px;">To help us fulfill your request to receive information from rvwest.com via e-mail, please add distribution@kpimedia.com to your Address Book or Safe List. Not interested in receiving this newsletter anymore? Click here to unsubscribe.</p>
                     </div>
 				</div>    
 	</main>
 
 		
 	<footer class="mt-5">
-		<a href="https://snoriderswest.com/" class="footerText">SnoRiderswest.com</a>
+		<a href="https://rvwest.com/" class="footerText">RVwest.com</a>
 	</footer>
 	
 	<!-- JQuery v1.12.4 -->
