--- a/subscribe-pages/rw-subscribe.html
+++ b/subscribe-pages/rw-subscribe.html
@@ -13,7 +13,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-	<title>Subscribe - RidersWest</title>
+	<title>RW Subscribe</title>
 
 	<!-- Standard Favicon -->
 	<link rel="icon" type="image/x-icon" href="../images/favicon.svg"/>
@@ -194,7 +194,7 @@ footer {
 					<div class="contact-form col-12 col-md-8 mx-auto" style="background-color: #f7f7f7;">
 						<div class="row">
 							<div class="col-12 col-md-12 col-sm-6 mt-4 px-5">
-								<h3 class="entry-title-lg uppercase mb-1 mt-4 font-weight-bold text-center col-12 col-md-9 mx-auto" style="font-size: 30px;">THE PERFECT NEWSLETTER FOR SNOWMOBILING LOVERS</h3>
+								<h3 class="entry-title-lg uppercase mb-1 mt-4 font-weight-bold text-center col-12 col-md-9 mx-auto" style="font-size: 30px;">THE PERFECT NEWSLETTER FOR ATVING AND MOTORCYCLING LOVERS</h3>
 								<form class="py-4">
 									<div class="row">
 										<div class="form-group col-md-6">
@@ -253,7 +253,7 @@ footer {
 				<!-- REMINDER -->
 				<div class="container my-5 mx-auto px-0">
 					<h3 class="font-weight-bold mt-5  mb-3 text-center">A GLENTE REMINDER</h3>
-					<p style="line-height: 1.6; font-size: 15px;" class="col-lg-8 col-12 text-center mx-auto">Learn about fellow ATVers in your local area, get the latest club news, and find out the benefits of being a part of an ATV club. We’ll keep you informed on what’s happening across Canada too. Know a fellow Rider who you think would appreciate getting this content? Please forward this page to them so they can subscribe to the RidersWest Newsletter.</p>
+					<p style="line-height: 1.6; font-size: 15px;" class="col-lg-8 col-12 text-center mx-auto">Learn about fellow ATVers in your local area, get the latest club news, and find out the benefits of being a part of an ATV club. We’ll keep you informed on what’s happening across Canada too. Know a fellow Rider who you think would appreciate getting this content? Please forward this page to them so they can subscribe to the <strong>RidersWest Newsletter.</strong></p>
 					<div class="row mx-auto justify-content-center d-flex">
 						<div class="col-12 col-md-4 mt-3">
 							<ul>
@@ -281,7 +281,7 @@ footer {
 					<div class="contact-form col-12 col-md-8 mx-auto" style="background-color: #f7f7f7;">
 						<div class="row">
 							<div class="col-12 col-md-12 col-sm-6 mt-4 px-5">
-								<h3 class="entry-title-lg uppercase mb-1 mt-4 font-weight-bold text-center col-12 col-md-9 mx-auto" style="font-size: 30px;">THE PERFECT NEWSLETTER FOR SNOWMOBILING LOVERS</h3>
+								<h3 class="entry-title-lg uppercase mb-1 mt-4 font-weight-bold text-center col-12 col-md-9 mx-auto" style="font-size: 30px;">THE PERFECT NEWSLETTER FOR ATVING AND MOTORCYCLING LOVERS</h3>
 								<form class="py-4">
 									<div class="row">
 										<div class="form-group col-md-6">
