--- a/subscribe-pages/rw-subscribe.html
+++ b/subscribe-pages/rw-subscribe.html
@@ -185,7 +185,7 @@ footer {
                         border: none;
                     }
                     .contact-form .form-group .submit:hover {
-                        background-color: #051D51;
+                        background-color: #C30101;
                         color: #FFF;
                     }
                 </style>
