--- a/subscribe-pages/kb-subscribe.html
+++ b/subscribe-pages/kb-subscribe.html
@@ -132,7 +132,7 @@ footer {
 			<div class="container-fluid px-auto mx-auto menu-block" style="border-top: none">
 				<nav class="navbar ownavigation navbar-expand-lg">
 					<div class="d-flex col-lg-2" style="text-align: center; margin:auto;">
-						<a class="navbar-brand" href="../index.html" title="Logo"><img style="max-width: 140%;" src="images/kb-logo.png"></a>
+						<a class="navbar-brand" style="font-size:0;" href="https://kootenaybiz.com/" title="Logo"><img class="col-md-12 col-12" src="images/kb-logo.png"></a>
 					</div>					
 				</nav>	
 			</div><!-- Menu Block /- -->
