--- a/subscribe-pages/sr-subscribe.html
+++ b/subscribe-pages/sr-subscribe.html
@@ -260,7 +260,7 @@ footer {
 									</div>
 									<div class="row mx-auto text-center">
 										<div class="form-group col-md-6 mx-auto text-center">
-											<button id="btn_submit" name="submit" style="width: 100%;" class="submit py-2 my-0">Send</button>
+											<button id="btn_submit" name="submit" style="width: 100%;" class="submit py-2 my-0">Sign up to SnoRiders</button>
 										</div>
 									</div>
 										<p class="text-center mt-3">I will never share your email address and you can unsubscribe in a single click.</p>
