--- a/subscribe-pages/rw-subscribe.html
+++ b/subscribe-pages/rw-subscribe.html
@@ -125,6 +125,46 @@ footer {
     position: sticky;
 }
 
+.submit {
+	font-size: 16px;
+	padding: 5px;
+	margin: 10px auto;
+	float:left;
+	width: 20%;
+	display: block;
+	border-radius: 5px;
+	font-weight: 900;
+	align-items: center;
+	justify-content: center;
+	background-color: #F71213;
+	color: #FFF;
+	border: none;
+}
+.submit:hover {
+	background-color: #C30101;
+	color: #FFF;
+}
+
+.contact-form .form-group .submit {
+	font-size: 16px;
+	padding: 5px;
+	margin: 10px auto;
+	float:left;
+	width: 20%;
+	display: block;
+	border-radius: 5px;
+	font-weight: 900;
+	align-items: center;
+	justify-content: center;
+	background-color: #F71213;
+	color: #FFF;
+	border: none;
+}
+.contact-form .form-group .submit:hover {
+	background-color: #C30101;
+	color: #FFF;
+}
+
 </style>
 
 <body data-offset="200" data-spy="scroll" data-target=".ownavigation">
@@ -149,9 +189,14 @@ footer {
 			<div class="container-fluid px-0 page-content blog-single cover-fullwidth" style="padding-bottom: 0;">
 
 				<div class="jumbotron text-center py-5" style="background-image: url(images/rw-banner.png); height: 450px; border-radius: 0;">
-					<h1 class="display-4 text-white font-weight-bold col-12 col-md-6 mx-auto mt-5">Keep up-to-date with RidersWest</h1>
+					<h1 class="display-4 text-white font-weight-bold col-12 col-md-6 mx-auto mt-4">Keep up-to-date with RidersWest</h1>
 					<p class="lead text-white col-12 col-md-6 mx-auto" style="line-height: 1.6; font-weight: bold;">Keep up-to-date with ATVing and motorcycling stories, events, products and photos from RidersWest.</p>
-				  </div>
+					<div class="row mx-auto text-center">
+						<div class="col-12 col-md-4 mx-auto text-center mb-5">
+							<a id="btn_submit" name="submit" style="width: 100%; font-size:18px;" href="#signup" class="submit py-2 my-0">Sign up for the FREE RidersWest newsletter</a>
+						</div>
+					</div>
+				</div>
 
 				<!-- two columns -->
 				<div class="container my-5 mx-auto px-0">
@@ -167,73 +212,6 @@ footer {
 					</div>
 				</div>		
 
-				<!-- Subscribe form -->
-                <style>
-                    .contact-form .form-group .submit {
-                        font-size: 16px;
-                        padding: 5px;
-                        margin: 10px auto;
-                        float:left;
-                        width: 20%;
-                        display: block;
-                        border-radius: 5px;
-                        font-weight: 900;
-                        align-items: center;
-                        justify-content: center;
-                        background-color: #F71213;
-                        color: #FFF;
-                        border: none;
-                    }
-                    .contact-form .form-group .submit:hover {
-                        background-color: #C30101;
-                        color: #FFF;
-                    }
-                </style>
-            
-				<div class="container my-5 mx-auto px-0">
-					<div class="contact-form col-12 col-md-8 mx-auto" style="background-color: #f7f7f7;">
-						<div class="row">
-							<div class="col-12 col-md-12 col-sm-6 mt-4 px-5">
-								<h3 class="entry-title-lg uppercase mb-1 mt-4 font-weight-bold text-center col-12 col-md-9 mx-auto" style="font-size: 30px;">THE PERFECT NEWSLETTER FOR ATVING AND MOTORCYCLING LOVERS</h3>
-								<form class="py-4">
-									<div class="row">
-										<div class="form-group col-md-6">
-											<input type="text" style="background-color: #FFF;" class="form-control" placeholder="Your Name" name="contact-name" id="input_name" required>
-										</div>
-										<div class="form-group col-md-6">
-											<input type="text" style="background-color: #FFF;" class="form-control" placeholder="Your Email" name="contact-email" id="input_email" required>
-										</div>
-									</div>
-									<div class="row">
-										<div class="form-group col-md-6">
-											<input type="text" style="background-color: #FFF;" class="form-control" placeholder="Where do you live?" name="contact-name" id="input_name" required>
-										</div>
-										<div class="form-group col-md-6">
-											<button id="btn_submit" name="submit" style="width: 100%;" class="submit py-2 my-0">Send</button>
-										</div>
-									</div>
-									<div class="row mx-auto text-center d-flex justify-content-center mt-3">
-										<div class="form-check col-md-3">
-											<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-											<label class="form-check-label" style="padding-left: 0;" for="flexCheckDefault">
-											East Kootenay
-											</label>
-										</div>
-										<div class="form-check col-md-3">
-											<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-											<label class="form-check-label" style="padding-left: 0;" for="flexCheckDefault">
-											West Kootenay
-											</label>
-										</div>
-									</div>
-										<p class="text-center mt-3">I will never share your email address and you can unsubscribe in a single click.</p>
-									</div>
-								</form>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- /Subscribe form -->
 
 				<!-- TARGETTED -->
 				<div class="container my-5 mx-auto px-0">
@@ -254,30 +232,10 @@ footer {
 				<div class="container my-5 mx-auto px-0">
 					<h3 class="font-weight-bold mt-5  mb-3 text-center">A GLENTE REMINDER</h3>
 					<p style="line-height: 1.6; font-size: 15px;" class="col-lg-8 col-12 text-center mx-auto">Learn about fellow ATVers in your local area, get the latest club news, and find out the benefits of being a part of an ATV club. We’ll keep you informed on what’s happening across Canada too. Know a fellow Rider who you think would appreciate getting this content? Please forward this page to them so they can subscribe to the <strong>RidersWest Newsletter.</strong></p>
-					<div class="row mx-auto justify-content-center d-flex">
-						<div class="col-12 col-md-4 mt-3">
-							<ul>
-								<li style="font-size: 15px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-								<li style="font-size: 15px;">Aenean mollis dui quis lacus maximus, eget auctor nisl ullamcorper.</li>
-								<li style="font-size: 15px;">Ut id magna vestibulum, dignissim libero pretium, tincidunt sem.</li>
-								<li style="font-size: 15px;">Donec volutpat mi at dolor ultricies, ac tempus dui mattis.</li>
-								<li style="font-size: 15px;">Phasellus tristique erat quis elit rhoncus, rhoncus placerat ante porttitor.</li>
-							</ul>
-						</div>
-						<div class="col-12 col-md-4 mt-3">
-							<ul>
-								<li style="font-size: 15px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-								<li style="font-size: 15px;">Aenean mollis dui quis lacus maximus, eget auctor nisl ullamcorper.</li>
-								<li style="font-size: 15px;">Ut id magna vestibulum, dignissim libero pretium, tincidunt sem.</li>
-								<li style="font-size: 15px;">Donec volutpat mi at dolor ultricies, ac tempus dui mattis.</li>
-								<li style="font-size: 15px;">Phasellus tristique erat quis elit rhoncus, rhoncus placerat ante porttitor.</li>
-							</ul>
-						</div>
-					</div>
 				</div>	
 
 				<!-- Subscribe form -->
-				<div class="container my-5 mx-auto px-0">
+				<div class="container my-5 mx-auto px-0" id="signup">
 					<div class="contact-form col-12 col-md-8 mx-auto" style="background-color: #f7f7f7;">
 						<div class="row">
 							<div class="col-12 col-md-12 col-sm-6 mt-4 px-5">
@@ -293,24 +251,16 @@ footer {
 									</div>
 									<div class="row">
 										<div class="form-group col-md-6">
-											<input type="text" style="background-color: #FFF;" class="form-control" placeholder="Where do you live?" name="contact-name" id="input_name" required>
+											<input type="text" style="background-color: #FFF;" class="form-control" placeholder="What city do you live in?" name="contact-name" id="input_name" required>
 										</div>
 										<div class="form-group col-md-6">
-											<button id="btn_submit" name="submit" style="width: 100%;" class="submit py-2 my-0">Send</button>
+											<input type="text" style="background-color: #FFF;" class="form-control" placeholder="What’s your  postal code/zip code?" name="contact-name" id="input_name" required>
 										</div>
+										
 									</div>
-									<div class="row mx-auto text-center d-flex justify-content-center mt-3">
-										<div class="form-check col-md-3">
-											<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-											<label class="form-check-label" style="padding-left: 0;" for="flexCheckDefault">
-											East Kootenay
-											</label>
-										</div>
-										<div class="form-check col-md-3">
-											<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-											<label class="form-check-label" style="padding-left: 0;" for="flexCheckDefault">
-											West Kootenay
-											</label>
+									<div class="row mx-auto text-center">
+										<div class="form-group col-md-6 mx-auto text-center">
+											<button id="btn_submit" name="submit" style="width: 100%;" class="submit py-2 my-0">Sign up to RidersWest</button>
 										</div>
 									</div>
 										<p class="text-center mt-3">I will never share your email address and you can unsubscribe in a single click.</p>
