--- a/subscribe-pages/kb-subscribe.html
+++ b/subscribe-pages/kb-subscribe.html
@@ -219,7 +219,7 @@ footer {
 							<img  class="col-12 col-md-12" src="images/subscribe-image.png">
 						</div>
 						<div class="col-12 col-md-4 my-5">
-							<h3 class="font-weight-bold mb-3">TARGETTED TO YOU</h3>
+							<h3 class="font-weight-bold my-3">TARGETTED TO YOU</h3>
 							<p style="line-height: 1.6; font-size: 15px;">Each newsletter is streamlined to share only the most interesting articles once a month. We won't spam your inbox, and email addresses are never sold to a third party.</p>
 							<p style="line-height: 1.6; font-size: 15px;">Lorem ipsum dolor sit amet, consectetur apiscing elienean molli	t id magna vpiscing elienean molli	t id magna vdipiscing elienean molli	t id magna vestibulum, dignissim libero pretium.</p>
 						</div>
